<resources>
    <string name="app_name">Modernland Ticketing </string>
    <string name="ticket">Ticketing Apps</string>

    <string name="input_username">Input Username</string>
    <string name="input_password">Input Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>

    <string name="dashboardtkt">Dashboard </string>
    <string name="homeuser">User Ticketing </string>
    <string name="homevendor">Vendor Ticketing </string>
    <string name="item">Item</string>
    <string name="menu">Menu</string>

    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>

    <string name="main">Main Menu</string>
    <string name="solving">Solving your problems</string>

    <string name="idticket">ID Ticket</string>
    <string name="reported">Reported</string>
    <string name="summary">Problem Summary</string>

    <string name="approval">Approval</string>
    <string name="assigment">Assigment</string>
    <string name="list">List</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="approve">Approve</string>
    <string name="tracking_prog">Tracking Progress</string>

    <string name="progres_ticket">Update Progress</string>
    <string name="status_progres">Status Progress</string>
    <string name="deskripsi_progres">Deskripsi Progress</string>
    <string name="sampai_dengan">Sampai Dengan</string>

    <string name="myticket">My Ticket</string>
    <string name="approvalticket">Approval Ticket</string>
    <string name="assigmenttikcet">Assigment Ticket</string>
    <string name="listticket">List Ticket</string>

    <string-array name="aplikasi">
        <item>--Akses Aplikasi--</item>
        <item>AST Desktop</item>
        <item>AST WEB</item>
    </string-array>

    <string-array name="progress">
        <item>On Process</item>
        <item>Completed</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
