<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormAssigmentFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="#fff"
            android:stretchColumns="2">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="________________________________________________________"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/progres_ticket"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_progres" />
            </TableRow>

            <TableRow>
                <Spinner
                    android:id="@+id/spn_progress"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:entries="@array/progress"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sampai_dengan" />
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/tTanggalTampil"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:hint="dd/mm/yyyy"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi_progres" />
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/tDeskripsiProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Input Deskripsi Masalah"
                    android:lines="10"
                    android:minLines="5"
                    android:gravity="top|left"
                    android:maxLines="15" />
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bCancelAsg"
                        android:text="@string/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/bSubmitAsg"
                        android:text="@string/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>